Moved the data input part of the code into a function called "sample setup" so that we can choose to run it or not while testing

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+biopython==1.83
 HTSeq==2.0.5
 numpy==1.26.4
 pandas==2.2.1
@@ -6,4 +7,3 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
 six==1.16.0
 tzdata==2024.1
-# Continue copying and pasting other packages:
