--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,54 @@
 biopython==1.83
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+coloredlogs==15.0.1
+colormath==3.0.0
+contourpy==1.2.0
+cutadapt==4.7
+cycler==0.12.1
+dnaio==1.2.0
+fonttools==4.50.0
 gitdb==4.0.11
 GitPython==3.1.42
 HTSeq==2.0.5
+humanfriendly==10.0
+humanize==4.9.0
+idna==3.6
+importlib_metadata==7.1.0
+isal==1.6.1
+Jinja2==3.1.3
+kaleido==0.2.1
+kiwisolver==1.4.5
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.8.3
+mdurl==0.1.2
+multiqc==1.21
+networkx==3.2.1
 numpy==1.26.4
+packaging==24.0
 pandas==2.2.1
+pillow==10.2.0
+plotly==5.20.0
+pyaml-env==1.2.1
+Pygments==2.17.2
+pyparsing==3.1.2
 pysam==0.22.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
+PyYAML==6.0.1
+requests==2.31.0
+rich==13.7.1
+rich-click==1.7.4
 six==1.16.0
 smmap==5.0.1
+spectra==0.0.11
+tenacity==8.2.3
+typing_extensions==4.10.0
 tzdata==2024.1
+urllib3==2.2.1
+xopen==1.9.0
+zipp==3.18.1
+zlib-ng==0.4.1
